# teknofest-2026-kamu-evrak-akilli-ajan

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint.yaml  .mcp.json.ornek  AGENTS.md  AUTHORS  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MEMORY.md  NOTICE  README.md  SECURITY.md  YAYIN_ONCESI_KONTROL.md  app.py  baslat.sh  calistir.bat  pyproject.toml  requirements-optional.txt  requirements.txt  run.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/: verifier.md
.claude/commands/: next.md  polish.md  spec.md  verify.md
.claude/hooks/: format_edited.py  pre_compact.py
.claude/templates/: IMPLEMENTATION_PLAN.md  PROMPT.md
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/fonts/: LISANS.md
data/: README.md
data/processed/: .gitkeep  benchmark_raporu.json  dayaniklilik_raporu.json  eval_report.json  eval_report_heldout.json  eval_report_heldout_v2.json  eval_report_heldout_v3.json  eval_report_heldout_v4.json  kayit_defteri.db  ml_model.json
data/raw/: mevzuat_beklenen_gerekceleri.json
demo/: README.md  demo_scenario.py
docs/: GUVENLIK_DENETIM_RAPORU.md  adillik_beyani.md  api_rehberi.md  gelistirici_rehberi.md  loopkit_kurulum.md  mcp_vizyonu.md  model_bilgileri.md  model_karti.md  performans_raporu.md  sartname_uyum_matrisi.md  standart_dosya_plani_notu.md  takp_aktarim_plani.md  teknik_rapor.md  veri_seti_datasheet.md  yarisma_resmi_kaynak_rehberi.md
presentations/: Agentra_Tech_Takim_Tanitim_Sunum.pptx  Agentra_Tech_Takim_Tanitim_Sunum_yeni.pptx  README.md  on_degerlendirme_sunumu.md  on_degerlendirme_sunumu.pptx  takim_tanitim_sunumu.md  ~$Agentra_Tech_Takim_Tanitim_Sunum.pptx
prototip/: kamu-evrak-arayuz.html
scripts/: api_ornek.py  benchmark.py  build_presentation.py  build_takim_tanitim_sunum.py  dayaniklilik_testi.py  evaluate.py  kalibrasyon_onerisi.py  llm_karsilastirma.py  ml_egit.py
src/: __init__.py  api.py  app.py  config.py  main.py  mcp_server.py
src/agents/: __init__.py  (+12 more)
tests/: __init__.py  test_adillik.py  test_anonimlestirme.py  test_api.py  test_asistan.py  test_asistan_hesap.py  test_baseline.py  test_benchmark.py  test_bulanik.py  test_classification.py  test_draft_writer.py  test_emsal.py  test_emsal_cbr.py  test_end_to_end.py  test_evaluation.py  test_eyazisma_xml.py  test_goruntu_onisleme.py  test_ilgi_sozel_tarih_kvkk.py  test_iliski_zinciri.py  test_istatistik.py  test_istatistiksel_siniflandirici.py  test_kalibrasyon.py  test_kanit.py  test_kayit_defteri.py  test_kokpit_eyazisma.py  test_konformal.py  test_kosum_muhru.py  test_kvkk_denetim.py  test_legislation.py  test_llm_constrained.py  test_mcp_server.py  test_metamorfik.py  test_oz_tutarlilik.py  test_ozet_kalite.py  test_resmi_pdf.py  test_sayi_ustveri.py  test_secici_tahmin.py  test_streaming.py  test_taslak_hakemi.py  test_taslak_reflexion.py  (+3 more)
wiki/: Adversarial-Dayanıklılık.md  Anayasal-İlkeler-ve-Etik.md  Değerlendirme-ve-Metrikler.md  Geliştirici-Rehberi.md  Görev-1-Okuma-ve-Analiz.md  Görev-2-Taslak-ve-Yönlendirme.md  Güven-ve-Ölçüm-Katmanı.md  Home.md  Hızlı-Başlangıç.md  KVKK-ve-Anonimleştirme.md  Komut-Satırı-ve-Demo.md  Kurulum-ve-Yapılandırma.md  MCP-Sunucusu.md  Mevzuat-RAG-ve-Hibrit-Arama.md  Model-Bilgileri.md  Orkestratör-ve-Koşullu-Kapılar.md  Proje-Hakkında.md  REST-API.md  Sistem-Mimarisi.md  Sözlük.md  Sık-Sorulan-Sorular.md  Test-ve-Sürekli-Entegrasyon.md  Triage-ve-Önceliklendirme.md  Uzman-Ajanlar.md  Veri-Setleri.md  Web-Arayüzü.md  Yol-Haritası.md  _Footer.md  _Sidebar.md  Şartname-Uyum-Matrisi.md
(+233 files in other folders)
