[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teknofest-2026-kamu-evrak-akilli-ajan"
version = "0.1.0"
description = "TEKNOFEST 2026 Yapay Zeka Dil Ajanları Yarışması - Kamu Evrak ve Yazışma Süreçleri için Akıllı Agent Destek Sistemi"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Teknofest 2026 Takımı"},
]
keywords = [
    "teknofest",
    "yapay-zeka",
    "nlp",
    "turkce",
    "agent",
    "multi-agent",
    "kamu",
    "evrak",
    "ocr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Turkish",
]

[project.urls]
Homepage = "https://github.com/TAKP/teknofest-2026-kamu-evrak-akilli-ajan"
Repository = "https://github.com/TAKP/teknofest-2026-kamu-evrak-akilli-ajan"
Issues = "https://github.com/TAKP/teknofest-2026-kamu-evrak-akilli-ajan/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
